--- a/PassionProject/Content/Site.css
+++ b/PassionProject/Content/Site.css
@@ -15,3 +15,48 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.header {
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    font-size: 3em;
+}
+.header img {
+    width: 100%; 
+    height: auto;
+}
+
+.container {
+    text-align: center;
+}
+
+.card {
+    margin: 3vh 1vw;
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.cardContainer {
+    padding: 2px 16px;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+}
+
+.flex div img {
+    padding-top: 3vh;
+}
+
+.record-container {
+    height: 100vh;
+}
