--- a/PassionProject/Views/Player/DeleteConfirm.cshtml
+++ b/PassionProject/Views/Player/DeleteConfirm.cshtml
@@ -4,9 +4,7 @@
     ViewBag.Title = "View";
 }
 
-<h2>View</h2>
-
-<h3>Are you sure you want to delete this player?</h3>
+<h3 class="margin-top">Are you sure you want to delete this player?</h3>
 <div>
     <dl class="dl-horizontal">
 
