--- a/PassionProject/Views/Player/List.cshtml
+++ b/PassionProject/Views/Player/List.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "View";
 }
 
-<h2>Players</h2>
+<h2 class="margin-top">Players</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
