--- a/PassionProject/Views/Player/Create.cshtml
+++ b/PassionProject/Views/Player/Create.cshtml
@@ -4,8 +4,6 @@
     ViewBag.Title = "View";
 }
 
-<h2>View</h2>
-
 @using (Html.BeginForm())
 {
     //This will set a hidden input field with value "_RequestVerificationToken"
@@ -14,28 +12,28 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Player</h4>
+        <h2 class="margin-top">Create a Player</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
+        <div class="form-group flex">
             @Html.LabelFor(model => model.player.PlayerName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.player.PlayerName, new { htmlAttributes = new { @class = "form-control", Name = "PlayerName" } })
                 @Html.ValidationMessageFor(model => model.player.PlayerName, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group flex">
             @Html.LabelFor(model => model.player.PlayerRank, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.player.PlayerRank, new { htmlAttributes = new { @class = "form-control", Name = "PlayerRank" } })
                 @Html.ValidationMessageFor(model => model.player.PlayerRank, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-12">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
