--- a/PassionProject/Views/Player/Edit.cshtml
+++ b/PassionProject/Views/Player/Edit.cshtml
@@ -4,8 +4,6 @@
     ViewBag.Title = "View";
 }
 
-<h2>Update</h2>
-
 @{
     //The attribute enctype="multipart/form-data" is required
     //if you are sending files as part of the HTTP POST request
@@ -15,23 +13,23 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Update Player</h4>
+        <h4 class="margin-top">Update Player</h4>
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.player.PlayerID, new { Name = "PlayerID" })
         <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
+            <div class="col-md-12">
+                <div class="form-group flex">
                     @Html.LabelFor(model => model.player.PlayerName, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-5">
                         @Html.EditorFor(model => model.player.PlayerName, new { htmlAttributes = new { @class = "form-control", Name = "PlayerName" } })
                         @Html.ValidationMessageFor(model => model.player.PlayerName, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group flex">
                     @Html.LabelFor(model => model.player.PlayerRank, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
+                    <div class="col-md-5">
                         @Html.EditorFor(model => model.player.PlayerRank, new { htmlAttributes = new { @class = "form-control", Name = "PlayerRank" } })
                         @Html.ValidationMessageFor(model => model.player.PlayerRank, "", new { @class = "text-danger" })
                     </div>
@@ -40,7 +38,7 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-12">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
