--- a/PassionProject/Views/Team/Create.cshtml
+++ b/PassionProject/Views/Team/Create.cshtml
@@ -4,7 +4,6 @@
     ViewBag.Title = "View";
 }
 
-<h2>View</h2>
 
 @using (Html.BeginForm())
 {
@@ -14,19 +13,19 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Team</h4>
+        <h4 class="margin-top" >Create a Team</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
+        <div class="form-group flex">
             @Html.LabelFor(model => model.TeamName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.TeamName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TeamName, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-12">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
