--- a/PassionProject/Views/Team/Edit.cshtml
+++ b/PassionProject/Views/Team/Edit.cshtml
@@ -5,64 +5,83 @@
     ViewBag.Title = "View";
 }
 
-<h2>Update</h2>
+<h2 class="margin-top" >Update Team</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-    <h4>Team</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.team.TeamID)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.team.TeamName, htmlAttributes: new { @class = "control-label col-md-2" })
+<div class="form-group flex">
+    <div>
+        @Html.LabelFor(model => model.team.TeamName, htmlAttributes: new { @class = "control-label col-md-6" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.team.TeamName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.team.TeamName, "", new { @class = "text-danger" })
         </div>
     </div>
 
-    <label for="player1">Player 1:</label>
-    <select id="players" name="player1">
-        @foreach (var item in Model.allplayers)
-        {
-            <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
-        }
-    </select>
-    <label for="player2">Player 2:</label>
-    <select id="players" name="player2">
-        @foreach (var item in Model.allplayers)
-        {
-            <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
-        }
-    </select>
-    <label for="player3">Player 3:</label>
-    <select id="players" name="player3">
-        @foreach (var item in Model.allplayers)
-        {
-            <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
-        }
-    </select>
-    <label for="player4">Player 4:</label>
-    <select id="players" name="player4">
-        @foreach (var item in Model.allplayers)
-        {
-            <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
-        }
-    </select>
-    <label for="player5">Player 5:</label>
-    <select id="players" name="player5">
-        @foreach (var item in Model.allplayers)
-        {
-            <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
-        }
-    </select>
+    <div>
+        <div>
+            <label for="player1">Player 1:</label>
+            <select id="players" name="player1">
+                @foreach (var item in Model.allplayers)
+                {
+                    <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
+                }
+            </select>
+        </div>
+
+        <div>
+            <label for="player2">Player 2:</label>
+            <select id="players" name="player2">
+                @foreach (var item in Model.allplayers)
+                {
+                    <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
+                }
+            </select>
+        </div>
+
+        <div>
+            <label for="player3">Player 3:</label>
+            <select id="players" name="player3">
+                @foreach (var item in Model.allplayers)
+                {
+                    <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
+                }
+            </select>
+        </div>
+
+        <div>
+            <label for="player4">Player 4:</label>
+            <select id="players" name="player4">
+                @foreach (var item in Model.allplayers)
+                {
+                    <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
+                }
+            </select>
+        </div>
+
+        <div>
+            <label for="player5">Player 5:</label>
+            <select id="players" name="player5">
+                @foreach (var item in Model.allplayers)
+                {
+                    <option value="@Html.DisplayFor(modelItem => item.PlayerID)">@Html.DisplayFor(modelItem => item.PlayerName)</option>
+                }
+            </select>
+        </div>
+    </div>
+
+
+    </div>
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-12">
             <input type="submit" value="Save" class="btn btn-default" />
         </div>
     </div>
