--- a/PassionProject/Views/Team/List.cshtml
+++ b/PassionProject/Views/Team/List.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "View";
 }
 
-<h2>View</h2>
+<h2>List Teams</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
+        <th class="text-center" id="no-border">
             @Html.DisplayNameFor(model => model.TeamName)
         </th>
     </tr>
