--- a/PassionProject/Views/Team/Details.cshtml
+++ b/PassionProject/Views/Team/Details.cshtml
@@ -5,6 +5,10 @@
 }
 
 <h4 class="margin-top">Team @Model.team.TeamName</h4>
+
+<div>@Html.ActionLink("Delete", "DeleteConfirm", new { id = Model.team.TeamID })</div>
+<hr />
+
 <div style="overflow:hidden;">
     <div class="row">
         <div class="col-md-12 margin">
